# TETRA-CLI

./: .gitignore  LICENSE  pyproject.toml
Test/: Test !
