[tool.poetry]
name = "tetracli"
version = "0.1.0"
description = ""
authors = ["yannou000", "SubeCraft"]

license = "MIT"

include = [{path = "tetracli"}]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
"repository" = "https://github.com/yannou000/TETRA-CLI"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
taskipy = "^1.10.1"
pyright = "^1.1.245"

[tool.taskipy.tasks]
check = "pyright"

[tool.pyright]
include = ["tetracli"]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
